--- a/vue2_KossieCoder/index.html
+++ b/vue2_KossieCoder/index.html
@@ -8,12 +8,27 @@
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
   </head>
   <body>
-    <div id="app">{{name}}</div>
+    <div id="app">{{nextYear('안녕하세요~!')}}</div>
     <script>
       new Vue({
         el: "#app", // 뷰 인스턴스가 생성 되면서 id="app" => 이 태그 안에는 vue 코드 작성 가능
         data: {
-          name: "코지 코더",
+          person: {
+            name: "킹정아",
+            age: 20,
+          },
+        },
+        methods: {
+          // 함수 ver.1
+          nextYear(greeting) {
+            return `${greeting}! ${this.person.name}은(는) 내년에 ${
+              this.person.age + 1
+            }살 입니다.`;
+          },
+          // 함수 ver.2
+          otherMethod: function () {
+            this.nextYear();
+          },
         },
       });
     </script>
