--- a/vue2_KossieCoder/index.html
+++ b/vue2_KossieCoder/index.html
@@ -9,35 +9,22 @@
   </head>
   <body>
     <div id="app">
-      {{nextYear('안녕하세요~!')}}
-      <input :type="type" v-bind:value="inputData" />
-      <a :href="getLink('/kossiecoder')">유튜브 링크</a>
+      {{year}} <br />
+      <button v-on:click="plus">더하기</button>
+      <button v-on:click="minus">빼기</button>
     </div>
     <script>
       new Vue({
         el: "#app", // 뷰 인스턴스가 생성 되면서 id="app" => 이 태그 안에는 vue 코드 작성 가능
         data: {
-          person: {
-            name: "킹정아",
-            age: 20,
-          },
-          inputData: "hello",
-          type: "text",
-          link: "https://www.youtube.com",
+          year: 2023,
         },
         methods: {
-          getLink(channel) {
-            return this.link + channel;
+          plus() {
+            this.year++;
           },
-          // 함수 ver.1
-          nextYear(greeting) {
-            return `${greeting}! ${this.person.name}은(는) 내년에 ${
-              this.person.age + 1
-            }살 입니다.`;
-          },
-          // 함수 ver.2
-          otherMethod: function () {
-            this.nextYear();
+          minus() {
+            this.year--;
           },
         },
       });
