--- a/vue2_KossieCoder/index.html
+++ b/vue2_KossieCoder/index.html
@@ -9,9 +9,10 @@
   </head>
   <body>
     <div id="app">
-      {{year}} <br />
-      <button v-on:click="plus">더하기</button>
-      <button v-on:click="minus">빼기</button>
+      <form v-on:submit.prevent="submit" action="">
+        <input type="text" /> <br />
+        <button type="submit">Submit</button>
+      </form>
     </div>
     <script>
       new Vue({
@@ -20,11 +21,9 @@
           year: 2023,
         },
         methods: {
-          plus() {
-            this.year++;
-          },
-          minus() {
-            this.year--;
+          submit() {
+            alert("submitted");
+            console.log("hello");
           },
         },
       });
