--- a/vue2_CaptainPangyo_1/playground/component.html
+++ b/vue2_CaptainPangyo_1/playground/component.html
@@ -9,9 +9,14 @@
   <body>
     <div id="app">
       <app-header></app-header>
-      <app-content></app-content>
       <app-footer></app-footer>
     </div>
+
+    <div id="app2">
+      <app-header></app-header>
+      <app-footer></app-footer>
+    </div>
+
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
     <script>
       /*
@@ -27,13 +32,18 @@
         template: "<h1>Header</h1>",
       });
 
-      Vue.component("app-content", {
-        template: "<div>Content</div>",
-      });
-
       new Vue({
         el: "#app",
         // 지역 컴포넌트 등록 방식
+        components: {
+          "app-footer": {
+            template: "<footer>footer</footer>",
+          },
+        },
+      });
+
+      new Vue({
+        el: "#app2",
         components: {
           "app-footer": {
             template: "<footer>footer</footer>",
