--- a/vue2_CaptainPangyo_1/playground/component-same-level.html
+++ b/vue2_CaptainPangyo_1/playground/component-same-level.html
@@ -8,13 +8,14 @@
   </head>
   <body>
     <div id="app">
-      <app-header></app-header>
+      <app-header v-bind:propsdata="num"></app-header>
       <app-content v-on:pass="deliverNum"></app-content>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
     <script>
       var appHeader = {
         template: "<div>header</div>",
+        props: ["propsdata"],
       };
 
       var appContent = {
