--- a/vue2_CaptainPangyo_1/playground/router.html
+++ b/vue2_CaptainPangyo_1/playground/router.html
@@ -8,6 +8,8 @@
   </head>
   <body>
     <div id="app">
+      <router-link to="/login">Login</router-link>
+      <router-link to="/main">Main</router-link>
       <router-view></router-view>
     </div>
 
